두번째 수정

--- a/칭다오사이트소개.html
+++ b/칭다오사이트소개.html
@@ -4,7 +4,7 @@
   <meta charset = "utf-8">
   <title> 칭다오 가즈아 - 사이트 소개 </title> </head>
 <body>
-  <h1><a href="칭다오메인.html"  title = "칭다오 가즈아"> 칭다오 가즈아</a></h1>
+  <h1><a href="index.html"  title = "칭다오 가즈아"> 칭다오 가즈아</a></h1>
   <ol>
   <li><a href="칭다오사이트소개.html" title = "칭다오 가즈아 - 사이트 소개">사이트 소개</a></li>
   <li><a href="칭다오 멤버.html"  title = "칭다오 가즈아 - 멤버">멤버</a></li>
