동영상, 댓글 추가

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <li><a href="칭다오 사진.html" title = "칭다오 가즈아 - 사진게시판">사진게시판</a></li>
     <li><a href="칭다오 자유게시판.html" title = "칭다오 가즈아 - 자유게시판">자유게시판</a></li>
     </ol>
-<h2>칭다오</h2>
-<p style = "margin-top : 20px"><h2> Qingdao</h2> <h3> 17.01.21 ~ 01.25</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/kMUHI7d_UtQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <br><strong>BGM은 레드벨벳♡</strong>
+<h2><u>칭다오</u></h2>
+<p style = "margin-top : 20px"><h2> Qingdao</h2> <h3><strong>17.01.21 ~ 01.25<strong></p>
   <br><img src= "칭다오메인.jpg" width="25%">
   <p style = "margin-top : 15px"> 칭다오 맥주 하오쯔~</p>
+</body>
+</html>
