--- a/칭다오 멤버.html
+++ b/칭다오 멤버.html
@@ -11,7 +11,9 @@
   <li><a href="칭다오 사진.html" title = "칭다오 가즈아 - 사진게시판">사진게시판</a></li>
   <li><a href="칭다오 자유게시판.html" title = "칭다오 가즈아 - 자유게시판">자유게시판</a></li>
   </ol>
-<h1>멤버</h1>
+<h1><u>멤버</u></h1>
   <p style = "margin-top : 50px">준비중입니다.</p>
   <p style = "margin-top : 30px">독사진쥬뗴염</p>
   <p style = "margin-top : 60px">명예멤버 아이린♡ <br> <img src = "아이린.jpg" width = "20%">
+  </body>
+  </html>
