--- a/칭다오 사진.html
+++ b/칭다오 사진.html
@@ -11,8 +11,10 @@
   <li><a href="칭다오 사진.html" title = "칭다오 가즈아 - 사진게시판">사진게시판</a></li>
   <li><a href="칭다오 자유게시판.html" title = "칭다오 가즈아 - 자유게시판">자유게시판</a></li>
   </ol>
-<h1>사진게시판</h1>
+<h1><u>사진게시판</u></h1>
   <img src = "아이린2.jpg" width = "15%"> <br>
   <p style = "margin-top : 50px">마음대로 올리세요</p>
   <p style = "margin-top : 20px">아직 준비중..ㅠㅠ</p>
   <p style = "margin-top : 30px">디자인, 기능은 학습 & 실습을 통해 개선할 예정>_<</p>
+</body>
+</html>
