--- a/칭다오사이트소개.html
+++ b/칭다오사이트소개.html
@@ -10,7 +10,9 @@
   <li><a href="칭다오 멤버.html"  title = "칭다오 가즈아 - 멤버">멤버</a></li>
   <li><a href="칭다오 사진.html" title = "칭다오 가즈아 - 사진게시판">사진게시판</a></li>
   <li><a href="칭다오 자유게시판.html" title = "칭다오 가즈아 - 자유게시판">자유게시판</a></li>
-  </ol>
-<h1>사이트 소개</h1>
+</ol>
+<h1><u>사이트 소개</u></h1>
   <p style = "margin-top : 50px">수원의 자랑 보성이의 웹 개발 실습용 및 칭다오 여행 추억팔이용</p>
   <p style = "margin-top : 30px">디자인, 기능은 학습 & 실습을 통해 개선할 예정>_<</p>
+</body>
+</html>
